@@ -1,6 +1,10 @@
 Changelog since cleanup-branch of 31.01.2020
 
 
+changelog of master-branch:
+    - added new event: "stage:blockitemfactory:finish"
+
+
 changelog of snapshot 20w12b [released on 21.03.2020]
     - added dimension definition for nether and end
     - removed deprecated loading phases
